--- a/index.html
+++ b/index.html
@@ -3,40 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - ULTIMATE FIX</title>
+    <title>MASTER RG - Full System</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <style>
-        :root { --neon: #00f2ff; --gold: #ffd700; --bg: #000; }
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
+        :root { --neon: #00f2ff; --gold: #ffd700; --red: #ff4444; --bg: #000; }
+        * { box-sizing: border-box; outline: none; -webkit-tap-highlight-color: transparent; }
         body { margin: 0; background: #000; color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; position: fixed; width: 100%; height: 100%; }
 
+        /* الصفحات */
         .page { position: fixed; inset: 0; background: #000; display: none; z-index: 10; }
         .page.active { display: block; }
 
         header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; }
         .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; overflow-y: auto; height: calc(100vh - 60px); }
-        .room-card { background: #111; padding: 15px; border-radius: 12px; border: 1px solid #333; text-align: center; cursor: pointer; }
+        .room-card { background: #111; padding: 20px; border-radius: 15px; border: 1px solid #333; text-align: center; cursor: pointer; }
 
         .chat-area { position: absolute; top: 60px; left: 0; right: 0; bottom: 80px; overflow-y: auto; padding: 10px; background: #050505; }
         .msg { display: flex; margin-bottom: 15px; }
         .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; object-fit: cover; }
-        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; }
+        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; position: relative; }
+        
         .yt-frame { width: 100%; aspect-ratio: 16/9; margin-top: 10px; border-radius: 8px; border: 1px solid var(--neon); }
+        .bot-badge { background: var(--red); color: #fff; font-size: 9px; padding: 2px 5px; border-radius: 4px; margin-right: 5px; }
 
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); }
+        /* القائمة الجانبية */
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); overflow-y: auto; }
         .sidebar.active { right: 0; }
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
+
         .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 10px; }
         #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
-        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
+        .send-btn { background: var(--neon); border: none; padding: 10px 15px; border-radius: 10px; font-weight: bold; margin-right: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
 
 <div id="lobby-page" class="page active">
     <header>
-        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">القائمة</button>
+        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">☰ القائمة</button>
         <b style="color:var(--neon)">MASTER RG 👑</b>
         <div style="width:50px"></div>
     </header>
@@ -45,28 +51,33 @@
         <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆 المسابقات</div>
         <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎 الديوان</div>
         <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝 النخبة</div>
+        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸 الشعر</div>
+        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕ المقهى</div>
     </div>
 </div>
 
 <div id="chat-page" class="page">
     <header>
-        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:20px;">➔</button>
+        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:22px;">➔</button>
         <b id="room-name-display"></b>
         <div id="online-btn" style="font-size:11px; color:var(--neon)">0 متصل</div>
     </header>
     <div id="chat-messages" class="chat-area"></div>
     <div class="footer">
-        <input type="text" id="msgInp" placeholder="رسالة، رابط يوتيوب، أو 'سؤال'..">
-        <button onclick="sendMsg()" style="background:var(--neon); border:none; padding:10px 15px; border-radius:10px; font-weight:bold; margin-right:5px;">إرسال</button>
+        <input type="text" id="msgInp" placeholder="اكتب رسالة أو 'سؤال'..">
+        <button onclick="sendMsg()" class="send-btn">إرسال</button>
     </div>
 </div>
 
 <div id="overlay" onclick="toggleSidebar()"></div>
 <div id="sidebar" class="sidebar">
-    <h4 style="color:var(--neon)">👤 الملف الشخصي</h4>
-    <p id="my-n-disp" style="color:var(--gold)"></p>
-    <hr>
-    <h4 style="color:var(--gold)">🟢 المتواجدون الآن</h4>
+    <h4 style="color:var(--neon)">👤 ملفي الشخصي</h4>
+    <div style="background:#111; padding:10px; border-radius:10px; margin-bottom:15px;">
+        <span id="my-n-disp" style="color:var(--gold)"></span><br>
+        <span id="my-lv-disp" style="font-size:11px;">المستوى: 1</span>
+    </div>
+    <hr style="border:0.5px solid #222">
+    <h4 style="color:var(--gold)">🟢 المتواجدون</h4>
     <div id="user-list-box"></div>
 </div>
 
@@ -75,25 +86,37 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let my = { n: localStorage.getItem('rg-n') || "", xp: parseInt(localStorage.getItem('rg-xp')) || 0 };
-    if(!my.n) { let name = prompt("ادخل اسمك:"); if(name){ localStorage.setItem('rg-n', name); location.reload(); } }
-    document.getElementById('my-n-disp').innerText = "الاسم: " + my.n;
+    // الكلمات الممنوعة لبوت الحماية
+    const badWords = ["تجاوز1", "سب1", "كلمة_سيئة"]; 
+    const questions = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"2+2*2؟", a:"6"}, {q:"ما هو أسرع حيوان؟", a:"الفهد"}];
+
+    let my = { 
+        n: localStorage.getItem('rg-n') || "", 
+        xp: parseInt(localStorage.getItem('rg-xp')) || 0,
+        i: "https://ui-avatars.com/api/?background=333&color=fff&name=U"
+    };
+
+    if(!my.n) {
+        let name = prompt("ادخل اسمك المستعار:");
+        if(name) { localStorage.setItem('rg-n', name); location.reload(); }
+    }
+    document.getElementById('my-n-disp').innerText = my.n;
+    document.getElementById('my-lv-disp').innerText = "المستوى: " + (Math.floor(my.xp/50)+1);
 
     let currentRoom = "", currentAnswer = "";
-    const questions = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"2+2*2؟", a:"6"}, {q:"أكبر كوكب؟", a:"المشتري"}];
 
     // نظام المتصلين
-    function presence() {
+    function setPresence() {
         let ref = db.ref('online_users/' + my.n);
         ref.set({ n: my.n }); ref.onDisconnect().remove();
         db.ref('online_users').on('value', snap => {
             let box = document.getElementById('user-list-box'); box.innerHTML = "";
             let count = 0;
-            snap.forEach(u => { count++; box.innerHTML += `<div style="padding:5px;">● ${u.val().n}</div>`; });
+            snap.forEach(u => { count++; box.innerHTML += `<div style="padding:5px; border-bottom:1px solid #111;">● ${u.val().n}</div>`; });
             document.getElementById('online-btn').innerText = count + " متصل";
         });
     }
-    presence();
+    setPresence();
 
     function getYT(url) {
         const reg = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
@@ -102,40 +125,27 @@
 
     function openRoom(id, name) {
         currentRoom = id; document.getElementById('room-name-display').innerText = name;
-        document.getElementById('lobby-page').classList.remove('active');
+        document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
         document.getElementById('chat-page').classList.add('active');
         loadMsgs();
     }
 
     function sendMsg() {
         let t = document.getElementById('msgInp').value.trim(); if(!t) return;
+
+        // 🛡️ بوت الحماية
+        if (badWords.some(w => t.includes(w))) {
+            alert("⚠️ بوت الحماية: يرجى عدم استخدام كلمات غير لائقة!");
+            document.getElementById('msgInp').value = "";
+            return;
+        }
+
+        // 🏆 بوت المسابقات
         if (currentAnswer && t === currentAnswer) {
-            db.ref('rooms/'+currentRoom).push({ u: "🤖 البوت", t: "✅ صح! كفو يا " + my.n, bot: true });
+            db.ref('rooms/'+currentRoom).push({ u: "🤖 بوت المسابقات", t: "✅ صح! كفو " + my.n + " حصلت على نقاط.", bot: true });
+            my.xp += 10; localStorage.setItem('rg-xp', my.xp);
             currentAnswer = "";
-        } else if (t === "سؤال") {
+        } else if (t === "سؤال" || t === "بوت") {
             let q = questions[Math.floor(Math.random()*questions.length)];
             currentAnswer = q.a;
-            db.ref('rooms/'+currentRoom).push({ u: "🤖 البوت", t: "🤔 سؤال: " + q.q, bot: true });
-        } else {
-            db.ref('rooms/'+currentRoom).push({ u: my.n, t: t });
-        }
-        document.getElementById('msgInp').value = "";
-    }
-
-    function loadMsgs() {
-        db.ref('rooms/'+currentRoom).off();
-        let box = document.getElementById('chat-messages'); box.innerHTML = "";
-        db.ref('rooms/'+currentRoom).limitToLast(30).on('child_added', snap => {
-            let m = snap.val(); let yt = getYT(m.t);
-            let div = document.createElement('div'); div.className = 'msg';
-            let content = `<div class="user-t">${m.t}${yt ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${yt}" frameborder="0" allowfullscreen></iframe>` : ''}</div>`;
-            div.innerHTML = `<img src="https://ui-avatars.com/api/?name=${m.u}&background=333&color=fff"><div><b style="color:${m.bot?'var(--gold)':'var(--neon)'}">${m.u}</b>${content}</div>`;
-            box.appendChild(div); box.scrollTop = box.scrollHeight;
-        });
-    }
-
-    function goBack() { document.querySelectorAll('.page').forEach(p=>p.classList.remove('active')); document.getElementById('lobby-page').classList.add('active'); }
-    function toggleSidebar() { let s = document.getElementById('sidebar'); s.classList.toggle('active'); document.getElementById('overlay').style.display = s.classList.contains('active') ? 'block' : 'none'; }
-</script>
-</body>
-</html>
+            db.ref('rooms/'+currentRoom).push({ u: "🤖 بوت المسابقات", t: "🤔 سؤال: " +
