--- a/index.html
+++ b/index.html
@@ -3,82 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Full System</title>
+    <title>MASTER RG - ULTIMATE</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <style>
         :root { --neon: #00f2ff; --gold: #ffd700; --red: #ff4444; --bg: #000; }
-        * { box-sizing: border-box; outline: none; -webkit-tap-highlight-color: transparent; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body { margin: 0; background: #000; color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; position: fixed; width: 100%; height: 100%; }
 
-        /* الصفحات */
-        .page { position: fixed; inset: 0; background: #000; display: none; z-index: 10; }
+        /* الهيدر واللوبي */
+        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 1000; }
+        .page { position: fixed; inset: 0; background: #000; display: none; z-index: 10; padding-top: 60px; }
         .page.active { display: block; }
-
-        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; }
-        .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; overflow-y: auto; height: calc(100vh - 60px); }
-        .room-card { background: #111; padding: 20px; border-radius: 15px; border: 1px solid #333; text-align: center; cursor: pointer; }
-
-        .chat-area { position: absolute; top: 60px; left: 0; right: 0; bottom: 80px; overflow-y: auto; padding: 10px; background: #050505; }
-        .msg { display: flex; margin-bottom: 15px; }
-        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; object-fit: cover; }
-        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; position: relative; }
         
-        .yt-frame { width: 100%; aspect-ratio: 16/9; margin-top: 10px; border-radius: 8px; border: 1px solid var(--neon); }
-        .bot-badge { background: var(--red); color: #fff; font-size: 9px; padding: 2px 5px; border-radius: 4px; margin-right: 5px; }
+        .lobby-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; overflow-y: auto; height: 100%; }
+        .room-btn { background: #111; padding: 20px; border-radius: 12px; border: 1px solid #333; text-align: center; cursor: pointer; font-size: 16px; }
+
+        /* الشات */
+        .chat-view { position: absolute; top: 60px; bottom: 80px; left: 0; right: 0; overflow-y: auto; padding: 10px; background: #050505; }
+        .msg-row { display: flex; margin-bottom: 12px; }
+        .msg-row img { width: 40px; height: 40px; border-radius: 8px; margin-left: 10px; }
+        .msg-bubble { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 80%; word-wrap: break-word; }
+        .yt-video { width: 100%; aspect-ratio: 16/9; margin-top: 8px; border-radius: 8px; border: 1px solid var(--neon); }
 
         /* القائمة الجانبية */
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); overflow-y: auto; }
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -280px; width: 260px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); }
         .sidebar.active { right: 0; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
 
-        .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 10px; }
-        #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
-        .send-btn { background: var(--neon); border: none; padding: 10px 15px; border-radius: 10px; font-weight: bold; margin-right: 5px; cursor: pointer; }
+        /* الإدخال */
+        .input-bar { position: absolute; bottom: 0; width: 100%; height: 80px; background: #111; display: flex; align-items: center; padding: 10px; border-top: 1px solid #222; }
+        #mInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
+        .s-btn { background: var(--neon); border: none; padding: 10px 15px; border-radius: 10px; font-weight: bold; margin-right: 5px; }
     </style>
 </head>
 <body>
 
-<div id="lobby-page" class="page active">
-    <header>
-        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">☰ القائمة</button>
-        <b style="color:var(--neon)">MASTER RG 👑</b>
-        <div style="width:50px"></div>
-    </header>
-    <div class="lobby-container">
-        <div class="room-card" onclick="openRoom('main', '👑 العرش')">🏛 العرش</div>
-        <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆 المسابقات</div>
-        <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎 الديوان</div>
-        <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝 النخبة</div>
-        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸 الشعر</div>
-        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕ المقهى</div>
+<header>
+    <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:5px 10px; border-radius:5px; font-weight:bold;">☰</button>
+    <b style="color:var(--neon)">MASTER RG 👑</b>
+    <div id="count-ui" style="font-size:11px; color:var(--gold)">0 متصل</div>
+</header>
+
+<div id="lobby" class="page active">
+    <div class="lobby-grid">
+        <div class="room-btn" onclick="join('main', '👑 العرش')">🏛 العرش</div>
+        <div class="room-btn" onclick="join('game', '🏆 المسابقات')">🏆 المسابقات</div>
+        <div class="room-btn" onclick="join('vip', '💎 الديوان')">💎 الديوان</div>
+        <div class="room-btn" onclick="join('elite', '🤝 النخبة')">🤝 النخبة</div>
     </div>
 </div>
 
-<div id="chat-page" class="page">
-    <header>
-        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:22px;">➔</button>
-        <b id="room-name-display"></b>
-        <div id="online-btn" style="font-size:11px; color:var(--neon)">0 متصل</div>
-    </header>
-    <div id="chat-messages" class="chat-area"></div>
-    <div class="footer">
-        <input type="text" id="msgInp" placeholder="اكتب رسالة أو 'سؤال'..">
-        <button onclick="sendMsg()" class="send-btn">إرسال</button>
+<div id="chat-room" class="page">
+    <div id="msgs" class="chat-view"></div>
+    <div class="input-bar">
+        <input type="text" id="mInp" placeholder="اكتب 'سؤال' أو رابط يوتيوب..">
+        <button onclick="send()" class="s-btn">إرسال</button>
+        <button onclick="leave()" style="background:var(--red); border:none; padding:10px; border-radius:10px; margin-right:5px;">🔙</button>
     </div>
 </div>
 
 <div id="overlay" onclick="toggleSidebar()"></div>
 <div id="sidebar" class="sidebar">
-    <h4 style="color:var(--neon)">👤 ملفي الشخصي</h4>
-    <div style="background:#111; padding:10px; border-radius:10px; margin-bottom:15px;">
-        <span id="my-n-disp" style="color:var(--gold)"></span><br>
-        <span id="my-lv-disp" style="font-size:11px;">المستوى: 1</span>
-    </div>
-    <hr style="border:0.5px solid #222">
+    <h3 style="color:var(--neon); margin-top:0;">الملف الشخصي</h3>
+    <div id="my-name-ui" style="color:var(--gold); margin-bottom:10px;"></div>
+    <div id="my-lv-ui" style="font-size:12px;">المستوى: 1</div>
+    <hr style="border:0.1px solid #222; margin:15px 0;">
     <h4 style="color:var(--gold)">🟢 المتواجدون</h4>
-    <div id="user-list-box"></div>
+    <div id="users-box" style="font-size:13px;"></div>
+    <button onclick="localStorage.clear(); location.reload();" style="width:100%; padding:8px; background:red; border:none; color:#fff; border-radius:5px; margin-top:20px;">خروج</button>
 </div>
 
 <script>
@@ -86,66 +80,89 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    // الكلمات الممنوعة لبوت الحماية
-    const badWords = ["تجاوز1", "سب1", "كلمة_سيئة"]; 
-    const questions = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"2+2*2؟", a:"6"}, {q:"ما هو أسرع حيوان؟", a:"الفهد"}];
-
-    let my = { 
-        n: localStorage.getItem('rg-n') || "", 
-        xp: parseInt(localStorage.getItem('rg-xp')) || 0,
+    // إعدادات
+    const badWords = ["تجاوز1", "سب1", "سيئة"];
+    const quiz = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"أكبر كوكب؟", a:"المشتري"}, {q:"2+2*2؟", a:"6"}];
+    
+    let user = { 
+        n: localStorage.getItem('rg_n') || "", 
+        xp: parseInt(localStorage.getItem('rg_xp')) || 0,
         i: "https://ui-avatars.com/api/?background=333&color=fff&name=U"
     };
 
-    if(!my.n) {
-        let name = prompt("ادخل اسمك المستعار:");
-        if(name) { localStorage.setItem('rg-n', name); location.reload(); }
+    if(!user.n) {
+        let n = prompt("ادخل اسمك المستعار للدخول:");
+        if(n) { localStorage.setItem('rg_n', n); location.reload(); }
     }
-    document.getElementById('my-n-disp').innerText = my.n;
-    document.getElementById('my-lv-disp').innerText = "المستوى: " + (Math.floor(my.xp/50)+1);
+    document.getElementById('my-name-ui').innerText = "الاسم: " + user.n;
+    document.getElementById('my-lv-ui').innerText = "المستوى: " + (Math.floor(user.xp/50)+1);
 
-    let currentRoom = "", currentAnswer = "";
+    let curRoom = "", curAns = "";
 
-    // نظام المتصلين
-    function setPresence() {
-        let ref = db.ref('online_users/' + my.n);
-        ref.set({ n: my.n }); ref.onDisconnect().remove();
-        db.ref('online_users').on('value', snap => {
-            let box = document.getElementById('user-list-box'); box.innerHTML = "";
-            let count = 0;
-            snap.forEach(u => { count++; box.innerHTML += `<div style="padding:5px; border-bottom:1px solid #111;">● ${u.val().n}</div>`; });
-            document.getElementById('online-btn').innerText = count + " متصل";
+    // الحضور والمتصلين
+    function presence() {
+        let ref = db.ref('online/' + user.n);
+        ref.set({ n: user.n }); ref.onDisconnect().remove();
+        db.ref('online').on('value', snap => {
+            let box = document.getElementById('users-box'); box.innerHTML = "";
+            let c = 0;
+            snap.forEach(u => { c++; box.innerHTML += `<div style="padding:5px;">● ${u.val().n}</div>`; });
+            document.getElementById('count-ui').innerText = c + " متصل";
         });
     }
-    setPresence();
+    presence();
 
-    function getYT(url) {
-        const reg = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
-        const match = url.match(reg); return (match && match[2].length === 11) ? match[2] : null;
+    function getYT(t) {
+        const r = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+        const m = t.match(r); return (m && m[2].length === 11) ? m[2] : null;
     }
 
-    function openRoom(id, name) {
-        currentRoom = id; document.getElementById('room-name-display').innerText = name;
+    function join(id, name) {
+        curRoom = id;
         document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
-        document.getElementById('chat-page').classList.add('active');
-        loadMsgs();
+        document.getElementById('chat-room').classList.add('active');
+        load();
     }
 
-    function sendMsg() {
-        let t = document.getElementById('msgInp').value.trim(); if(!t) return;
+    function send() {
+        let t = document.getElementById('mInp').value.trim(); if(!t) return;
+        if(badWords.some(w => t.includes(w))) { alert("🛡️ حماية: ممنوع التجاوز!"); return; }
 
-        // 🛡️ بوت الحماية
-        if (badWords.some(w => t.includes(w))) {
-            alert("⚠️ بوت الحماية: يرجى عدم استخدام كلمات غير لائقة!");
-            document.getElementById('msgInp').value = "";
-            return;
+        if(curAns && t === curAns) {
+            db.ref('rooms/'+curRoom).push({ u: "🤖 بوت", t: "✅ صح! أحسنت يا " + user.n, bot:true });
+            user.xp += 10; localStorage.setItem('rg_xp', user.xp);
+            curAns = "";
+        } else if(t === "سؤال") {
+            let q = quiz[Math.floor(Math.random()*quiz.length)];
+            curAns = q.a;
+            db.ref('rooms/'+curRoom).push({ u: "🤖 بوت", t: "🤔 سؤال: " + q.q, bot:true });
+        } else {
+            db.ref('rooms/'+curRoom).push({ u: user.n, t: t, lv: (Math.floor(user.xp/50)+1) });
+            user.xp += 2; localStorage.setItem('rg_xp', user.xp);
         }
+        document.getElementById('mInp').value = "";
+    }
 
-        // 🏆 بوت المسابقات
-        if (currentAnswer && t === currentAnswer) {
-            db.ref('rooms/'+currentRoom).push({ u: "🤖 بوت المسابقات", t: "✅ صح! كفو " + my.n + " حصلت على نقاط.", bot: true });
-            my.xp += 10; localStorage.setItem('rg-xp', my.xp);
-            currentAnswer = "";
-        } else if (t === "سؤال" || t === "بوت") {
-            let q = questions[Math.floor(Math.random()*questions.length)];
-            currentAnswer = q.a;
-            db.ref('rooms/'+currentRoom).push({ u: "🤖 بوت المسابقات", t: "🤔 سؤال: " +
+    function load() {
+        db.ref('rooms/'+curRoom).off();
+        let box = document.getElementById('msgs'); box.innerHTML = "";
+        db.ref('rooms/'+curRoom).limitToLast(30).on('child_added', snap => {
+            let m = snap.val(); let yt = getYT(m.t);
+            let div = document.createElement('div'); div.className = 'msg-row';
+            div.innerHTML = `<img src="${m.bot?'https://cdn-icons-png.flaticon.com/512/4712/4712035.png':user.i}">
+                <div class="msg-bubble">
+                    <b style="color:${m.bot?'var(--gold)':'var(--neon)'}">${m.u} ${m.lv?`[Lv.${m.lv}]`:''}</b><br>
+                    ${m.t} ${yt ? `<iframe class="yt-video" src="https://www.youtube.com/embed/${yt}" frameborder="0" allowfullscreen></iframe>` : ''}
+                </div>`;
+            box.appendChild(div); box.scrollTop = box.scrollHeight;
+        });
+    }
+
+    function leave() { document.getElementById('chat-room').classList.remove('active'); document.getElementById('lobby').classList.add('active'); }
+    function toggleSidebar() { 
+        let s = document.getElementById('sidebar'); s.classList.toggle('active');
+        document.getElementById('overlay').style.display = s.classList.contains('active') ? 'block' : 'none';
+    }
+</script>
+</body>
+</html>
