--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Speaking Bot</title>
+    <title>MASTER RG - Chat AI</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600;800&display=swap" rel="stylesheet">
@@ -12,21 +11,21 @@
         :root { --neon: #00f2ff; --gold: #ffd700; --glass: rgba(255, 255, 255, 0.05); --bg: #000; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: 'Cairo', sans-serif; }
         body { margin: 0; background: var(--bg); color: #fff; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-        header { height: 65px; background: #0a0a0a; border-bottom: 1px solid #222; display: flex; justify-content: space-between; align-items: center; padding: 0 15px; position: relative; z-index: 1001; }
+        header { height: 65px; background: #0a0a0a; border-bottom: 1px solid #222; display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 1001; }
         .page { position: fixed; inset: 0; background: var(--bg); display: none; z-index: 10; padding-top: 65px; }
         .page.active { display: block; }
         .lobby-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 20px; }
-        .room-card { background: #111; padding: 25px; border-radius: 20px; border: 1px solid #222; text-align: center; color: var(--neon); }
-        .chat-container { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; background: #000; }
+        .room-card { background: #111; padding: 25px; border-radius: 20px; border: 1px solid #333; text-align: center; color: var(--neon); box-shadow: 0 4px 15px rgba(0,0,0,0.5); }
+        .chat-container { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; }
         .msg-box { display: flex; margin-bottom: 18px; }
         .msg-box img { width: 45px; height: 45px; border-radius: 12px; margin-left: 12px; }
         .bubble { background: var(--glass); border: 1px solid #222; padding: 12px; border-radius: 15px; max-width: 80%; backdrop-filter: blur(10px); }
         .yt-vid { width: 100%; aspect-ratio: 16/9; margin-top: 10px; border-radius: 12px; border: 1px solid #333; }
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: rgba(10, 10, 10, 0.95); z-index: 2000; transition: 0.4s; border-left: 1px solid #333; padding: 25px; }
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: rgba(10, 10, 10, 0.98); z-index: 2000; transition: 0.4s; border-left: 1px solid #333; padding: 25px; }
         .sidebar.active { right: 0; }
         .input-area { position: absolute; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; display: flex; align-items: center; padding: 0 15px; border-top: 1px solid #222; }
         #mInp { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 15px; text-align: right; }
-        .send-btn { background: var(--neon); border: none; width: 50px; height: 50px; border-radius: 15px; margin-right: 10px; font-weight: bold; color: #000; }
+        .send-btn { background: var(--neon); border: none; width: 50px; height: 50px; border-radius: 15px; margin-right: 10px; font-weight: bold; color: #000; font-size: 20px; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; z-index: 1500; }
     </style>
 </head>
@@ -35,12 +34,12 @@
 <header>
     <button onclick="toggleSide()" style="background:none; border:none; color:var(--neon); font-size:24px;">☰</button>
     <b style="color: var(--gold);">MASTER <span style="color:var(--neon)">RG</span></b>
-    <div id="status-bar" style="font-size:10px; color:var(--neon)">● 0 متصل</div>
+    <div id="status-bar" style="font-size:11px; color:var(--neon)">0 متصل</div>
 </header>
 
 <div id="lobby" class="page active">
     <div class="lobby-grid">
-        <div class="room-card" onclick="enter('main', '🏛 العرش')">👑 العرش</div>
+        <div class="room-card" onclick="enter('main', '👑 العرش')">🏛 العرش</div>
         <div class="room-card" onclick="enter('game', '🏆 المسابقات')">🎮 المسابقات</div>
         <div class="room-card" onclick="enter('vip', '💎 الديوان')">💎 الديوان</div>
         <div class="room-card" onclick="enter('elite', '🤝 النخبة')">🤝 النخبة</div>
@@ -50,7 +49,7 @@
 <div id="chat" class="page">
     <div id="msgs" class="chat-container"></div>
     <div class="input-area">
-        <input type="text" id="mInp" placeholder="اسأل البوت أو دردش...">
+        <input type="text" id="mInp" placeholder="سولف ويه البوت..">
         <button onclick="sendMsg()" class="send-btn">➤</button>
         <button onclick="back()" style="background:#222; border:none; width:40px; height:50px; border-radius:15px; margin-right:5px; color:#fff">🔙</button>
     </div>
@@ -58,9 +57,9 @@
 
 <div id="overlay" onclick="toggleSide()"></div>
 <div id="sidebar" class="sidebar">
-    <h3 style="color:var(--neon)">المتواجدون 🌍</h3>
+    <h3 style="color:var(--neon)">الإمبراطورية 🌍</h3>
     <div id="online-list"></div>
-    <button onclick="localStorage.clear(); location.reload();" style="width:100%; margin-top:30px; background:#ff4444; border:none; padding:10px; border-radius:12px; color:#fff;">خروج</button>
+    <button onclick="localStorage.clear(); location.reload();" style="width:100%; margin-top:30px; background:#ff4444; border:none; padding:10px; border-radius:12px; color:#fff;">تسجيل خروج</button>
 </div>
 
 <script>
@@ -72,15 +71,21 @@
     if(!my.n) { let name = prompt("ادخل اسمك:"); if(name){ localStorage.setItem('rg_n', name); location.reload(); } }
 
     let curRoom = "", curAns = "";
-    const quiz = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"أكبر كوكب؟", a:"المشتري"}];
+    const quiz = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"أكبر كوكب؟", a:"المشتري"}, {q:"حيوان سريع؟", a:"الفهد"}];
 
-    // ذكاء البوت المتحدث
+    // ذكاء البوت المطور (سوالف عراقية)
     function botReply(text) {
         let t = text.toLowerCase();
-        if(t.includes("هلو") || t.includes("السلام")) return "أهلاً بك يا بطل في إمبراطورية MASTER RG! نورتنا.";
-        if(t.includes("شلونك") || t.includes("اخبارك")) return "بخير ما دام الماستر راضي علينا! أنت شلونك؟";
-        if(t.includes("منو الماستر") || t.includes("صاحب الشات")) return "الماستر هو القائد الأعلى لهذه الإمبراطورية!";
-        if(t.includes("بوت")) return "نعم عيوني، كلي آذان صاغية.. تريد 'سؤال' لو تسولف؟";
+        if(t.includes("هلو") || t.includes("السلام") || t.includes("هلاو")) return "هلا وغلا، نورت الإمبراطورية يا غالي!";
+        if(t.includes("شلونك") || t.includes("شلونكم")) return "والله بخير إذا أنت بخير، تدلل عليّ.";
+        if(t.includes("منور")) return "النور نورك، شعلت الشات بوجودك!";
+        if(t.includes("كفو")) return "كفو منك ومن أصلك الطيب.";
+        if(t.includes("ضوجة") || t.includes("ملل")) return "ليش الضوجة؟ سولف ويه الماستر وافتح قلبك!";
+        if(t.includes("تحبني")) return "أعشقك مو بس أحبك، أنت من ريحة الماستر!";
+        if(t.includes("اضحك") || t.includes("نكتة")) return "مرة واحد راح للمطعم، جان يكول للجرسون عندك أجنحة؟ كاله اي، جان يكوله لعد طير من كدامي! هههه";
+        if(t.includes("منو أنت")) return "أنا حارس الشات والمساعد الشخصي للماستر RG.";
+        if(t.includes("شكرا") || t.includes("يسلمو")) return "ولو تدلل، هذا واجبي يا بطل.";
+        if(t.includes("باي") || t.includes("تصبحون")) return "بأمان الله، ننتظرك ترجع تنورنا!";
         return null;
     }
 
@@ -109,24 +114,19 @@
     function sendMsg() {
         let t = document.getElementById('mInp').value.trim(); if(!t) return;
         
-        // هل الجواب صح؟
         if(curAns && t === curAns) {
-            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "🎯 صح! أحسنت يا " + my.n, isBot: true });
-            my.xp += 10; localStorage.setItem('rg_xp', my.xp); curAns = "";
-        } 
-        // هل طلب سؤال؟
-        else if(t === "سؤال") {
+            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "🎯 كفووو صح! إجابتك ذكية يا " + my.n, isBot: true });
+            my.xp += 15; localStorage.setItem('rg_xp', my.xp); curAns = "";
+        } else if(t === "سؤال" || t === "بوت") {
             let q = quiz[Math.floor(Math.random()*quiz.length)]; curAns = q.a;
-            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "🤔 سؤال: " + q.q, isBot: true });
-        } 
-        // هل يسولف مع البوت؟
-        else {
+            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "🤔 يله شباب/بنات منو يحل: " + q.q, isBot: true });
+        } else {
             let reply = botReply(t);
             db.ref('rooms/'+curRoom).push({ u: my.n, t: t, f: my.flag, lv: (Math.floor(my.xp/50)+1) });
             if(reply) {
                 setTimeout(() => {
                     db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: reply, isBot: true });
-                }, 1000);
+                }, 800);
             }
         }
         document.getElementById('mInp').value = "";
@@ -135,12 +135,12 @@
     function loadMsgs() {
         db.ref('rooms/'+curRoom).off();
         let box = document.getElementById('msgs'); box.innerHTML = "";
-        db.ref('rooms/'+curRoom).limitToLast(30).on('child_added', snap => {
+        db.ref('rooms/'+curRoom).limitToLast(25).on('child_added', snap => {
             let m = snap.val(); let yt = getYT(m.t);
             let div = document.createElement('div'); div.className = 'msg-box';
-            div.innerHTML = `<img src="https://ui-avatars.com/api/?name=${m.u}&background=222&color=fff">
+            div.innerHTML = `<img src="https://ui-avatars.com/api/?name=${m.u}&background=333&color=fff">
                 <div class="bubble">
-                    <b style="color:${m.isBot?'var(--gold)':'var(--neon)'}">${m.u}</b><br>
+                    <b style="color:${m.isBot?'var(--gold)':'var(--neon)'}">${m.u} ${m.lv?`[Lv.${m.lv}]`:''}</b><br>
                     <span>${m.t}</span>
                     ${yt ? `<iframe class="yt-vid" src="https://www.youtube.com/embed/${yt}" frameborder="0" allowfullscreen></iframe>` : ''}
                 </div>`;
